fix(style): page overflow, card thumbnail

--- a/materials/public/css/scss/components/_card.scss
+++ b/materials/public/css/scss/components/_card.scss
@@ -1,4 +1,4 @@
-// TODO
+@import '../defaults/variables';
 
 .card {
     display: flex;
@@ -14,21 +14,30 @@
         margin-top: 1rem;
     }
 
-    & > * {
-        max-width: 100%;
-        max-height: 100%;
+    &__header * {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        line-clamp: 1;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        @media screen and (max-width: ($xs - 200px)) {
+            line-clamp: 2;
+            -webkit-line-clamp: 2;
+        }
     }
 
     &__thumbnail {
         flex-grow: 1;
         flex-shrink: 1;
-        display: flex;
-        overflow: hidden;
-        justify-content: center;
-        align-items: center;
-        img {
-            width: 10rem;
-            min-height: 100%;
+        object-fit: cover;
+        width: 20%;
+        aspect-ratio: 1 / 1;
+        @media screen and (max-width: $xs) {
+            width: 30%;
+        }
+        @media screen and (max-width: ($xs - 200px)) {
+            width: 100%;
         }
     }
 
