--- a/materials/public/css/scss/components/_page.scss
+++ b/materials/public/css/scss/components/_page.scss
@@ -5,6 +5,8 @@
     flex-wrap: wrap;
     align-items: flex-start;
     height: fit-content;
+    overflow-x: scroll;
+    overflow-y: hidden;
     gap: 1rem;
     margin: 0.25rem;
     padding: 1rem;
